add new notebooks

--- a/notebooks/01_spacy_pipeline.ipynb
+++ b/notebooks/01_spacy_pipeline.ipynb
@@ -129,7 +129,7 @@
    "metadata": {},
    "source": [
     "# Load Model\n",
-    "We start by loading a standard spaCy model:"
+    "We start by loading a standard spaCy model which comes with a standard processing pipeline:"
    ]
   },
   {
@@ -139,6 +139,28 @@
    "outputs": [],
    "source": [
     "nlp = spacy.load(\"en_core_web_sm\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('tagger', <spacy.pipeline.pipes.Tagger at 0x117000dd8>),\n",
+       " ('parser', <spacy.pipeline.pipes.DependencyParser at 0x1171a1048>),\n",
+       " ('ner', <spacy.pipeline.pipes.EntityRecognizer at 0x1171a10a8>)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nlp.pipeline"
    ]
   },
   {
@@ -153,12 +175,16 @@
     "- \"pna\"\n",
     "- \"PE\"\n",
     "\n",
-    "We instantiate an EntityRuler class and then define patterns to match these concepts in the texts. In the spaCy API, we do this by defining a list of dictionaries which define the label and pattern for each concept. For more detailed information, see spaCy's documentation on rule-based matching: https://spacy.io/usage/rule-based-matching. In this example, we'll assign a label of **\"CONDITION\"** to each entity."
+    "We instantiate an EntityRuler class and then define patterns to match these concepts in the texts. In the spaCy API, we do this by defining a list of dictionaries which define the label and pattern for each concept. \n",
+    "\n",
+    "For more detailed information, see spaCy's documentation on rule-based matching: https://spacy.io/usage/rule-based-matching. \n",
+    "\n",
+    "In this example, we'll assign a label of **\"CONDITION\"** to each entity."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,18 +256,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('tagger', <spacy.pipeline.pipes.Tagger at 0x11aa80b70>),\n",
-       " ('parser', <spacy.pipeline.pipes.DependencyParser at 0x11abe4f48>),\n",
-       " ('entity_ruler', <spacy.pipeline.entityruler.EntityRuler at 0x11a997630>)]"
+       "[('tagger', <spacy.pipeline.pipes.Tagger at 0x117000dd8>),\n",
+       " ('parser', <spacy.pipeline.pipes.DependencyParser at 0x1171a1048>),\n",
+       " ('entity_ruler', <spacy.pipeline.entityruler.EntityRuler at 0x116f0c9b0>)]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,19 +388,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('tagger', <spacy.pipeline.pipes.Tagger at 0x11aa80b70>),\n",
-       " ('parser', <spacy.pipeline.pipes.DependencyParser at 0x11abe4f48>),\n",
-       " ('entity_ruler', <spacy.pipeline.entityruler.EntityRuler at 0x11a997630>),\n",
-       " ('context', <cycontext.context_component.ConTextComponent at 0x11cd4e048>)]"
+       "[('tagger', <spacy.pipeline.pipes.Tagger at 0x117000dd8>),\n",
+       " ('parser', <spacy.pipeline.pipes.DependencyParser at 0x1171a1048>),\n",
+       " ('entity_ruler', <spacy.pipeline.entityruler.EntityRuler at 0x116f0c9b0>),\n",
+       " ('context', <cycontext.context_component.ConTextComponent at 0x1192db390>)]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -542,13 +568,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xml:lang=\"en\" id=\"da1154526c9f459cb6143d24ee4e2cad-0\" class=\"displacy\" width=\"750\" height=\"224.5\" direction=\"ltr\" style=\"max-width: none; height: 224.5px; color: #000000; background: #ffffff; font-family: Arial; direction: ltr\">\n",
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xml:lang=\"en\" id=\"10bd20866995452a8aab91eb2f30e8d8-0\" class=\"displacy\" width=\"750\" height=\"224.5\" direction=\"ltr\" style=\"max-width: none; height: 224.5px; color: #000000; background: #ffffff; font-family: Arial; direction: ltr\">\n",
        "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"134.5\">\n",
        "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"50\">PMH</tspan>\n",
        "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"50\"></tspan>\n",
@@ -570,9 +596,9 @@
        "</text>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-da1154526c9f459cb6143d24ee4e2cad-0-0\" stroke-width=\"2px\" d=\"M70,89.5 C70,2.0 400.0,2.0 400.0,89.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-10bd20866995452a8aab91eb2f30e8d8-0-0\" stroke-width=\"2px\" d=\"M70,89.5 C70,2.0 400.0,2.0 400.0,89.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-da1154526c9f459cb6143d24ee4e2cad-0-0\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">HISTORICAL</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-10bd20866995452a8aab91eb2f30e8d8-0-0\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">HISTORICAL</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M400.0,91.5 L408.0,79.5 392.0,79.5\" fill=\"currentColor\"/>\n",
        "</g>\n",
