--- a/notebooks/00_Simple_Example.ipynb
+++ b/notebooks/00_Simple_Example.ipynb
@@ -370,9 +370,8 @@
     "# Additional Span attributes\n",
     "In addition to storing the results in the ConTextGraph, cycontext also sets several additional span-level attributes which contain the contextual information for that target. In the future this should be customizable, but this and similar attributes can also be set manually, as will be shown in a later notebook.\n",
     "\n",
-    "- `is_negated`: If a span is modified by \"DEFINITE_NEGATED_EXISTENCE\", this is set to True. Default is False\n",
-    "- `is_current`: If a span is modified by \"HISTORICAL\", this is set to False. Default is True\n",
-    "- `is_experiencer`: If a span is modified by \"FAMILY_HISTORY\", this is set to False, meaning that the patient was no the person experiencing a clinical condition. Default is True"
+    "- `is_experienced`: If a span is modified by \"DEFINITE_NEGATED_EXISTENCE\", \"INDICATION\", or \"FAMILY_HISTORY\",  this is set to False, meaning that the patient did not experience the mentioned clinical condition. Default is True\n",
+    "- `is_current`: If a span is modified by \"HISTORICAL\", this is set to False. Default is True"
    ]
   },
   {
@@ -385,18 +384,17 @@
      "output_type": "stream",
      "text": [
       "pneumonia\n",
-      "is_negated:  True\n",
-      "is_current:  True\n",
-      "is_experiencer:  True\n"
+      "is_experiencer:  False\n",
+      "is_current:  True\n"
      ]
     }
    ],
    "source": [
     "for ent in doc.ents:\n",
     "    print(ent)\n",
-    "    print(\"is_negated: \", ent._.is_negated)\n",
+    "    print(\"is_experiencer: \", ent._.is_experienced)\n",
     "    print(\"is_current: \", ent._.is_current)\n",
-    "    print(\"is_experiencer: \", ent._.is_experiencer)"
+    "    "
    ]
   },
   {
@@ -473,7 +471,7 @@
     {
      "data": {
       "text/html": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xml:lang=\"en\" id=\"24aa7e00bec241768dd8c264e063dc27-0\" class=\"displacy\" width=\"1275\" height=\"224.5\" direction=\"ltr\" style=\"max-width: none; height: 224.5px; color: #000000; background: #ffffff; font-family: Arial; direction: ltr\">\n",
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xml:lang=\"en\" id=\"5e606a9e068741a4b5cfee749fb4fc01-0\" class=\"displacy\" width=\"1275\" height=\"224.5\" direction=\"ltr\" style=\"max-width: none; height: 224.5px; color: #000000; background: #ffffff; font-family: Arial; direction: ltr\">\n",
        "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"134.5\">\n",
        "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"50\">There</tspan>\n",
        "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"50\"></tspan>\n",
@@ -510,9 +508,9 @@
        "</text>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-24aa7e00bec241768dd8c264e063dc27-0-0\" stroke-width=\"2px\" d=\"M420,89.5 C420,2.0 925.0,2.0 925.0,89.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-5e606a9e068741a4b5cfee749fb4fc01-0-0\" stroke-width=\"2px\" d=\"M420,89.5 C420,2.0 925.0,2.0 925.0,89.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-24aa7e00bec241768dd8c264e063dc27-0-0\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">DEFINITE_NEGATED_EXISTENCE</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-5e606a9e068741a4b5cfee749fb4fc01-0-0\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">DEFINITE_NEGATED_EXISTENCE</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M925.0,91.5 L933.0,79.5 917.0,79.5\" fill=\"currentColor\"/>\n",
        "</g>\n",
