--- a/notebooks/02_Modifiers.ipynb
+++ b/notebooks/02_Modifiers.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ConTextItem: [no evidence of, DEFINITE_NEGATED_EXISTENCE, None, FORWARD]\n"
+      "ConTextItem(literal='no evidence of', category='DEFINITE_NEGATED_EXISTENCE', pattern=None, rule='FORWARD')\n"
      ]
     }
    ],
@@ -356,7 +356,7 @@
     {
      "data": {
       "text/plain": [
-       "<spacy.matcher.matcher.Matcher at 0x119dd32c8>"
+       "<spacy.matcher.matcher.Matcher at 0x114a2f848>"
       ]
      },
      "execution_count": 22,
@@ -376,7 +376,7 @@
     {
      "data": {
       "text/plain": [
-       "<spacy.matcher.phrasematcher.PhraseMatcher at 0x119c76cf8>"
+       "<spacy.matcher.phrasematcher.PhraseMatcher at 0x1148b6e48>"
       ]
      },
      "execution_count": 23,
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
        "There is no evidence of pneumonia but there is CHF"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
        "<TagObject> [no evidence of, DEFINITE_NEGATED_EXISTENCE]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
        "pneumonia but there is CHF"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
        "There is no evidence of pneumonia but there is CHF"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +643,7 @@
        "<TagObject> [no evidence of, DEFINITE_NEGATED_EXISTENCE]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
        "pneumonia"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
        "no history of"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,38 +740,6 @@
    "source": [
     "doc = nlp(text)\n",
     "context(doc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<TagObject> [no history of, DEFINITE_NEGATED_EXISTENCE],\n",
-       " <TagObject> [history, HISTORICAL]]"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "doc._.context_graph.modifiers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Now set prune to True\n",
-    "context = ConTextComponent(nlp, prune=True)\n",
-    "context.add(item_data)"
    ]
   },
   {
@@ -782,10 +750,42 @@
     {
      "data": {
       "text/plain": [
-       "no history of"
+       "[<TagObject> [no history of, DEFINITE_NEGATED_EXISTENCE],\n",
+       " <TagObject> [history, HISTORICAL]]"
       ]
      },
      "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc._.context_graph.modifiers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now set prune to True\n",
+    "context = ConTextComponent(nlp, prune=True)\n",
+    "context.add(item_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "no history of"
+      ]
+     },
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -806,13 +806,243 @@
        "[<TagObject> [no history of, DEFINITE_NEGATED_EXISTENCE]]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "doc._.context_graph.modifiers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Setting additional Span attributes\n",
+    "As seen in an earlier notebook, cycontext registers two new attributes for target Spans: `is_experienced` and `is_current`. These values are set to default values of True and changed if a target is modified by certain modifiers. This logic is set in the variable `DEFAULT_ATTRS`. This is a dictionary which maps modifier category names to the attribute name/value pair which should be set if a target is modified by that modifier type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cycontext.context_component import DEFAULT_ATTRS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'DEFINITE_NEGATED_EXISTENCE': ('is_experienced', False),\n",
+       " 'FAMILY_HISTORY': ('is_experienced', False),\n",
+       " 'INDICATION': ('is_experienced', False),\n",
+       " 'HISTORICAL': ('is_current', False)}"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DEFAULT_ATTRS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This logic can be defined by creating a dictionary with the same structure as DEFAULT_ATTRS and passing that in as the `add_attrs` parameter. If setting your own extensions, you must first call `Span.set_extension` on each of the extensions. \n",
+    "\n",
+    "If more complex logic is required, custom attributes can also be set manually outside of the ConTextComponent, for example as a post-processing step."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from spacy.tokens import Span"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "custom_attrs = {'DEFINITE_NEGATED_EXISTENCE': ('is_negated', True),\n",
+    " 'FAMILY_HISTORY': ('is_family_history', True),\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Span.set_extension(\"is_negated\", default=False)\n",
+    "Span.set_extension(\"is_family_history\", default=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "context = ConTextComponent(nlp, add_attrs=custom_attrs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'DEFINITE_NEGATED_EXISTENCE': ('is_negated', True),\n",
+       " 'FAMILY_HISTORY': ('is_family_history', True)}"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "context.context_attributes_mapping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "item_data = [ConTextItem(\"no evidence of\", \"DEFINITE_NEGATED_EXISTENCE\", \"FORWARD\"),\n",
+    "            ConTextItem(\"family history\", \"FAMILY_HISTORY\", \"FORWARD\"),\n",
+    "            ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "context.add(item_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc = nlp(\"There is no evidence of pneumonia. Family history of diabetes.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc.ents = doc[5:6], doc[-2:-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(pneumonia, diabetes)"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc.ents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "is_negated True\n",
+      "is_family_history True\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "There is no evidence of pneumonia. Family history of diabetes."
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "context(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pneumonia\n",
+      "is_negated:  True\n",
+      "is_family_history:  False\n",
+      "\n",
+      "diabetes\n",
+      "is_negated:  False\n",
+      "is_family_history:  True\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ent in doc.ents:\n",
+    "    print(ent)\n",
+    "    print(\"is_negated: \", ent._.is_negated)\n",
+    "    print(\"is_family_history: \", ent._.is_family_history)\n",
+    "    print()"
    ]
   },
   {
